# Chess-engine

./: .env.example  .gitignore  README.md  alembic.ini  architecture.md  docker-compose.yml  main.py  project_architecture;.drawio  pyproject.toml
alembic/: env.py
alembic/versions/: 6c26098a8d1a_initial_schema_of_servers_dbclear.py
diagrams/: Architecture_of_modules_current.drawio  Architecture_of_modules_target.drawio
src/: __init__.py  coord.py  enums.py  fen_state.py  figure.py  position.py
src/application/ports/: password_hasher.py  repositories.py  uow.py
src/application/users/: register_user.py
src/bootstrap/providers/: user_provider.py
src/domain/: __init__.py
src/domain/entities/: game.py  user.py
src/domain/enums/: game_result.py  status.py
src/domain/errors/: user_errors.py
src/domain/repositories/: __init__.py  user_repository.py
src/engine/: __init__.py  coord.py  enums.py  fen_state.py  figure.py  node.py  position.py
src/infrastructure/db/: __init__.py
src/infrastructure/db/models/: game_model.py  move_model.py  user_model.py
src/infrastructure/repositories/: user_repository.py
src/myapp/: config.py  container.py  run.py
src/myapp/application/ports/: repositories.py  unit_of_work.py
src/myapp/bootstrap/: container.py
src/myapp/domain/entities/: game.py  move.py  user.py
src/presentation/: views.py
src/presentation/templates/: game.html  index.html  register.html
src/server/: app.py  index.html  server.py
src/server/templates/: index.html
tests/: __init__.py  test_figure.py  test_position.py
(+22 files in other folders)
