[project]
name = "chess-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.1.3",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.47",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.3",
]
